<resources>
    <string name="app_name">model_login</string>
    <string name="login">登录（扫码后）</string>
    <string name="logintipmsg">二维码登录</string>
    <string name="pleaseenternumber">输入手机号</string>
    <string name="passwordGet">请输入验证码</string>
    <string name="dianwokanshuoming">点我查看使用说明</string>
    <string name="chinesephoneNum">请您输入中国手机号</string>
    <string name="sendCode">发送验证法</string>
    <string name="enter">登录</string>
</resources>