<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        android:orientation="vertical"
        tools:context=".LoginActivity">



        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:text="@string/logintipmsg"
            />

        <Button
            android:id="@+id/btMsg"
            android:text="@string/dianwokanshuoming"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="60sp"
            android:layout_marginRight="60sp"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>


        <Button
            android:id="@+id/loadPic"
            android:text="点击加载二维码图片"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="60sp"
            android:layout_marginRight="60sp"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>

        <Button
            android:id="@+id/loginButton"
            android:text="@string/login"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="60sp"
            android:layout_marginRight="60sp"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>
        <WebView
            android:id="@+id/login_webView"
            android:layout_width="match_parent"
            android:layout_height="400sp"/>

    </LinearLayout>
</layout>